# QtAIDL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sync.profile
LICENSES/: MIT.txt
examples/common/: stopwatch.qface  stopwatch.yaml
examples/stopwatchapp/: CMakeLists.txt
examples/stopwatchapp/app/: CMakeLists.txt
examples/stopwatchapp/app/android/: AndroidManifest.xml  build.gradle
examples/stopwatchapp/app/res/: CircularItem.qml  RaisedBackground.qml  RoundButton.qml  RoundedButton.qml  Stopwatch.qml  main.qml  qml.qrc
examples/stopwatchapp/app/res/shaders/: circularShader.frag.qsb
examples/stopwatchapp/app/src/: main.cpp
examples/stopwatchapp/cmake/: AndroidAPKHelpers.cmake
examples/stopwatchapp/middleware/: CMakeLists.txt
examples/stopwatchapp/middleware/backend_aidl/: CMakeLists.txt
examples/stopwatchapp/middleware/backend_simulator/: CMakeLists.txt  simulation.qml
examples/stopwatchapp/middleware/frontend/: CMakeLists.txt
examples/stopwatchapp/middleware/imports/: CMakeLists.txt
examples/stopwatchservice/: build.gradle  settings.gradle
examples/stopwatchservice/gradle/wrapper/: gradle-wrapper.properties
examples/stopwatchservice/service/: build.gradle
examples/stopwatchservice/service/src/main/: AndroidManifest.xml
examples/stopwatchservice/service/src/main/java/com/spyro_soft/stopwatchservice/: StopwatchService.kt
src/: CMakeLists.txt
src/aidl/: CMakeLists.txt  aidl.cpp
src/android/: CMakeLists.txt
src/android/jar/: AndroidManifest.xml  CMakeLists.txt
src/android/jar/src/com/spyro_soft/aidl/: ServiceBinder.java
src/tools/: CMakeLists.txt
src/tools/gradle-plugin/: build.gradle.kts
src/tools/gradle-plugin/src/main/kotlin/com/spyro_soft/qtaidl/: AndroidSourceSetExtension.kt  CondaSetupTask.kt  DataSetupTask.kt  EnvSetupTask.kt  GenerateAidlSourcesTask.kt  QtAidlPlugin.kt  QtAidlPluginConstants.kt  QtAidlPluginExtension.kt  QtAidlPluginUtils.kt
src/tools/gradle-plugin/src/main/resources/data/: environment.yaml
src/tools/gradle-plugin/src/test/kotlin/com/spyro_soft/qtaidl/: QtAidlPluginTest.kt
src/tools/ifcodegen/: CMakeLists.txt
src/tools/ifcodegen/templates/: aidl.yaml
src/tools/ifcodegen/templates/aidl/: CMakeLists.txt.j2  backend.cpp.j2  backend.h.j2  callback.aidl.j2  callback.cpp.j2  callback.h.j2  enum.aidl.j2  filters.py  plugin.cpp.j2  plugin.h.j2  plugin.json.j2  service.aidl.j2  struct.aidl.j2
